# kitx

./: .env  .gitignore  Cargo.toml  LICENSE  README.CN.md  README.md
migrations/: 001_article.sql  20241217032110_article.sql  20241217072910_configure.sql
src/: lib.rs  prelude.rs
src/builders/: base.rs  composite.rs  find.rs  mod.rs  remove.rs  single.rs  table.rs  upsert.rs  upset.rs
src/common/: builder.rs  conversion.rs  database.rs  error.rs  fields.rs  filter.rs  helper.rs  mod.rs  operations.rs  query.rs  relation.rs  sql.rs  types.rs  util.rs
src/internal/: delete_builder.rs  insert_builder.rs  mod.rs  select_builder.rs  subquery.rs  update_builder.rs  upsert_mysql.rs  upsert_postgres.rs  upsert_sqlite.rs  upset_mysql.rs  upset_postgres.rs  upset_sqlite.rs
src/mysql/: builder.rs  composite.rs  connection.rs  crud.rs  global.rs  kind.rs  mod.rs  multi_key.rs  operations.rs  query.rs  single.rs  sql.rs
src/postgres/: builder.rs  composite.rs  connection.rs  crud.rs  global.rs  kind.rs  mod.rs  multi_key.rs  operations.rs  query.rs  single.rs  sql.rs
src/sql/: agg.rs  bind_params.rs  builder.rs  case_when.rs  cte.rs  delete.rs  filter.rs  helper.rs  insert.rs  join.rs  mod.rs  params.rs  query_builder.rs  select.rs  update.rs
src/sqlite/: builder.rs  composite.rs  connection.rs  crud.rs  global.rs  kind.rs  mod.rs  multi_key.rs  operations.rs  query.rs  single.rs  sql.rs
src/test_utils/: article.rs  init.rs  mod.rs
src/utils/: chars.rs  db.rs  mod.rs  query.rs  query_condition.rs  type_conversion.rs  typpe_conversion.rs  value.rs
tests/: article.rs  builder_test.rs  dao_test.rs  mysql_test.rs  postgres_test.rs  sql_test.rs  sqlite_test.rs
