[package]
name = "kitx"
version = "0.0.18"
edition = "2024"
authors = ["Wu Jianqi <janchie@163.com>"]

description = "A lightweight wrapper for database operations based on sqlx, enabling fast CRUD operations."
repository = "https://github.com/wujianqi/kitx"
documentation = "https://docs.rs/kitx"
readme = "README.md"
keywords = ["sqlx", "sql_builder", "CRUD", "database", "ORM"]
categories = ["database"]
license-file = "LICENSE"

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls"]}
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133"}
chrono = { version = "0.4.38", features = ["serde"]}
field_access = { version = "0.1.11" }
uuid = { version = "1.15.1", optional = true } 
rust_decimal = { version = "1.36.0", optional = true } 
num_cpus = { version = "1.16.0", optional = true } 
ipnetwork = { version = "0.21.1", optional = true }
mac_address = { version = "1.1.8", optional = true }

[features]
default = ["sqlite", "mysql", "postgres"]
sqlite = [
    "sqlx/sqlite", "sqlx/chrono", "sqlx/json", "sqlx/uuid",
]
mysql = [
    "num_cpus", "ipnetwork", "sqlx/mysql", "sqlx/chrono", "sqlx/json", "sqlx/rust_decimal", "sqlx/uuid",
]
postgres = [
    "num_cpus", "ipnetwork",  "mac_address","sqlx/postgres", "sqlx/chrono", "sqlx/json", "sqlx/uuid",
    "sqlx/rust_decimal", "sqlx/ipnetwork", "sqlx/mac_address"
]

[dev-dependencies]
dotenv = "0.15.0"

# cargo doc --document-private-items --no-deps
[package.metadata.docs.rs]
features = ["sqlite", "mysql", "postgres"]
